<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sun_symbol"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:alpha="0.19"
        />
    <TextView
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/please_sign_in"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/hand_regular"
        android:textColor="@color/red_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="373dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        android:hint="@string/email_address"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="373dp"
        android:layout_height="65dp"
        android:layout_marginTop="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="373dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        style="@style/simple_button"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/forgotButton"
        android:layout_width="122dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/createButton"
        android:layout_width="191dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/don_t_have_account_create_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <Button
        android:id="@+id/googleButton"
        android:layout_width="373dp"
        android:layout_height="60dp"
        android:layout_marginTop="88dp"
        style="@style/simple_button"
        android:text="@string/sign_in_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>