<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionnaireFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sun_symbol"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:alpha="0.19"
        />
    <!-- Scrollable questions area -->
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- only dynamic questions go here -->
            <LinearLayout
                android:id="@+id/container"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Navigation buttons always below the questions-->
            <LinearLayout
                android:id="@+id/navButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Leftmost: Previous -->
                <Button
                    android:id="@+id/btnPrev"
                    android:text="@string/previous"
                    android:visibility="gone"
                    style="@style/simple_button"/>

                <!-- Spacer takes up all remaining space -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <!-- Rightmost: Next -->
                <Button
                    android:id="@+id/btnNext"
                    android:text="@string/next"
                    style="@style/simple_button"/>

                <!-- Rightmost (only visible on last page): Submit -->
                <Button
                    android:id="@+id/btnSubmit"
                    android:text="@string/submit"
                    style="@style/simple_button"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
